--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="styles.css"
+  <link rel="stylesheet" href="styles.css">
   
   <title>Frontend Mentor | Blog preview card</title>
 
@@ -19,11 +19,14 @@
   <div class="main">
     <div class="container">
       <img src="assets\images\illustration-article.svg" alt="illustration-article">
-      <div class="btn">Learning</div>
+      <div class="btn"><strong>Learning</strong></div>
       <p>Published 21 Dec 2023</p>
-      <h1>HTML & CSS foundations</h1>
-      <p>These languages are the backbone of every website, defining structure, content, and presentation.
-        Greg Hooper</p>
+      <h2 >HTML & CSS foundations</h2>
+      <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+      <div>
+        <img src="assets\images\image-avatar.webp" alt="avatar">
+        <p>Greg Hooper</p>
+      </div>
     </div>
   </div>
   
