--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <div class="container">
       <img src="assets\images\illustration-article.svg" alt="illustration-article">
       <div class="btn"><strong>Learning</strong></div>
-      <p>Published 21 Dec 2023</p>
+      <p><strong>Published 09 Feb 2025</strong></p>
       <h2 >HTML & CSS foundations</h2>
-      <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
-      <div>
+      <p class="para">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+      <div class="greg">
         <img src="assets\images\image-avatar.webp" alt="avatar">
-        <p>Greg Hooper</p>
+        <strong class="hooper">Greg Hooper</strong>
       </div>
     </div>
   </div>
